security key support and fix insane pull video not playing

--- a/src/stores/InsanePullStore/insanePullStore.module.scss
+++ b/src/stores/InsanePullStore/insanePullStore.module.scss
@@ -5,6 +5,18 @@
     background-color: white;
 }
 
+.loading {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    user-select: none;
+}
+
 .video {
     position: fixed;
     inset: 0;
