--- a/src/stores/InsanePullStore/insanePullStore.module.scss
+++ b/src/stores/InsanePullStore/insanePullStore.module.scss
@@ -5,18 +5,6 @@
     background-color: white;
 }
 
-.loading {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-    color: white;
-    font-size: 2rem;
-    text-align: center;
-    user-select: none;
-}
-
 .video {
     position: fixed;
     inset: 0;
@@ -30,4 +18,5 @@
     transform: translateZ(0);
     pointer-events: none;
     user-select: none;
+    filter: saturate(1.5);
 }
